@@ -110,7 +110,7 @@ FunctionsToExport = 'Add-FontsToBcContainer', 'Add-GitToAlProjectFolder',
                'Get-TestsFromBcContainer', 'Import-BcContainerLicense', 
                'Import-ConfigPackageInBcContainer', 'Import-DeltasToNavContainer', 
                'Import-ObjectsToNavContainer', 'UploadImportAndApply-ConfigPackageInBcContainer',
-               'Import-PfxCertificateToBcContainer', 
+               'Import-PfxCertificateToBcContainer', 'Import-CertificateToBcContainer', 
                'Import-TestToolkitToBcContainer', 'Install-BcContainerApp', 
                'Install-NAVSipCryptoProviderFromBcContainer', 
                'Invoke-BcContainerApi', 'Invoke-NavContainerCodeunit', 
